Enable vim mode and some minor optimizations.
1. set history-limit to 100000
2. start windows numbering at 0
3. disable find session

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,11 +17,12 @@ set -s focus-events on
 
 set -g prefix2 C-a                        # GNU-Screen compatible prefix
 bind C-a send-prefix -2
+set-window-option -g mode-keys vi
 
 set -q -g status-utf8 on                  # expect UTF-8 (tmux < 2.2)
 setw -q -g utf8 on
 
-set -g history-limit 5000                 # boost history
+set -g history-limit 10000                 # boost history
 
 # edit configuration
 bind e new-window -n "~/.tmux.conf.local" "EDITOR=\${EDITOR//mvim/vim} && EDITOR=\${EDITOR//gvim/vim} && \${EDITOR:-vim} ~/.tmux.conf.local && tmux source ~/.tmux.conf && tmux display \"~/.tmux.conf sourced\""
@@ -32,8 +33,8 @@ bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
 # -- display -------------------------------------------------------------------
 
-set -g base-index 1           # start windows numbering at 1
-setw -g pane-base-index 1     # make pane numbering consistent with windows
+set -g base-index 0           # start windows numbering at 0
+setw -g pane-base-index 0     # make pane numbering consistent with windows
 
 setw -g automatic-rename on   # rename window to reflect current program
 set -g renumber-windows on    # renumber windows when a window is closed
@@ -59,7 +60,7 @@ set -g visual-activity off
 bind C-c new-session
 
 # find session
-bind C-f command-prompt -p find-session 'switch-client -t %%'
+# bind C-f command-prompt -p find-session 'switch-client -t %%'
 
 # split current window horizontally
 bind - split-window -v
@@ -67,10 +68,10 @@ bind - split-window -v
 bind _ split-window -h
 
 # pane navigation
-bind -r h select-pane -L  # move left
-bind -r j select-pane -D  # move down
-bind -r k select-pane -U  # move up
-bind -r l select-pane -R  # move right
+bind h select-pane -L  # move left
+bind j select-pane -D  # move down
+bind k select-pane -U  # move up
+bind l select-pane -R  # move right
 bind > swap-pane -D       # swap current pane with the next one
 bind < swap-pane -U       # swap current pane with the previous one
 
@@ -96,12 +97,12 @@ bind m run "cut -c3- ~/.tmux.conf | sh -s _toggle_mouse"
 
 # -- urlview -------------------------------------------------------------------
 
-bind U run "cut -c3- ~/.tmux.conf | sh -s _urlview #{pane_id}"
+# bind U run "cut -c3- ~/.tmux.conf | sh -s _urlview #{pane_id}"
 
 
 # -- facebook pathpicker -------------------------------------------------------
 
-bind F run "cut -c3- ~/.tmux.conf | sh -s _fpp #{pane_id}"
+# bind F run "cut -c3- ~/.tmux.conf | sh -s _fpp #{pane_id}"
 
 
 # -- list choice (tmux < 2.4) --------------------------------------------------
